fixed merge conflict